--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "3.2.4",
     "jade": "*",
-    "mongodb": "~1.3.19"
+    "mongodb": "~1.3.19",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
