--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "jquery": "~2.0.3",
     "bootstrap": "~3.0.0",
-    "angular": "*"
+    "angular": "*",
+    "angular-route": "*",
+    "angular-resource": "*"
   }
 }
